# fast-api-demo

./: pyproject.toml  settings.toml
main/: main.py
main/controller/: ItemController.py
main/lib/: datastore.py
main/model/: ItemNoteModel.py  TodoItemModel.py
main/repository/: todoRepository.py
