[tool.poetry]
name = "todoadv"
version = "0.1.0"
description = ""
authors = ["Matheus <mxavierdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
dynaconf = "^3.1.8"
walrus = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
